--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>Desenvolvido por maria gil</p>
     </footer>
 </body>
     
